@@ -474,6 +474,7 @@
  ("src/compiler/loop")
 
  ("src/compiler/ir1final")
+ ("src/compiler/constraint")
  ("src/compiler/array-tran")
  ("src/compiler/seqtran")
  ("src/compiler/typetran")
@@ -489,7 +490,6 @@
  ("src/compiler/dfo")
  ("src/compiler/dce")
  ("src/compiler/checkgen")
- ("src/compiler/constraint")
  ("src/compiler/physenvanal")
 
  ("src/compiler/tn")
