@@ -2333,7 +2333,8 @@
   (let ((value (cast-value cast))
         (lvar (cast-lvar cast)))
     (when (and (bound-cast-p cast)
-               (bound-cast-check cast))
+               (bound-cast-check cast)
+               (not (node-deleted (bound-cast-check cast))))
       (flush-combination (bound-cast-check cast))
       (setf (bound-cast-check cast) nil))
     (delete-filter cast lvar value)
